--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "gh",
+  "name": "github-usage",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -19,5 +19,8 @@
     "gulp": "~3.8.8",
     "gulp-nodemon": "~1.0.4",
     "gulp-livereload": "~2.1.1"
+  },
+  "engines": {
+    "node":"0.10.26"
   }
 }
