--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "express": "~4.4.5",
-    "serve-favicon": "~2.0.1",
-    "morgan": "~1.1.1",
-    "cookie-parser": "~1.3.2",
     "body-parser": "~1.4.3",
+    "cookie-parser": "~1.3.2",
     "debug": "~1.0.2",
+    "express": "~4.4.5",
+    "github": "^0.2.2",
     "jade": "~1.3.1",
-    "nunjucks": "^1.1.0"
+    "morgan": "~1.1.1",
+    "nunjucks": "^1.1.0",
+    "serve-favicon": "~2.0.1"
   },
   "devDependencies": {
     "gulp": "~3.8.8",
@@ -21,6 +22,6 @@
     "gulp-livereload": "~2.1.1"
   },
   "engines": {
-    "node":"0.10.26"
+    "node": "0.10.26"
   }
 }
