--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "cookie-parser": "~1.3.2",
     "debug": "~1.0.2",
     "express": "~4.4.5",
+    "github": "^0.2.2",
     "jade": "~1.3.1",
     "morgan": "~1.1.1",
     "nunjucks": "^1.1.0",
