--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "express": "~4.4.5",
     "github": "^0.2.2",
     "jade": "~1.3.1",
+    "lodash": "^2.4.1",
     "morgan": "~1.1.1",
     "nunjucks": "^1.1.0",
     "serve-favicon": "~2.0.1"
