--- a/package.json
+++ b/package.json
@@ -19,8 +19,9 @@
   },
   "devDependencies": {
     "gulp": "~3.8.8",
+    "gulp-livereload": "~2.1.1",
     "gulp-nodemon": "~1.0.4",
-    "gulp-livereload": "~2.1.1"
+    "yargs": "^1.3.3"
   },
   "engines": {
     "node": "0.10.26"
